# matrix_dot_omp_mpi_hybrid

./: .gitignore  CMakeLists.txt  README.md  matrix_dot_omp_mpi.c  utils.c
